Clean up comment section spacing issues

--- a/src/_sass/components/comments.scss
+++ b/src/_sass/components/comments.scss
@@ -5,8 +5,8 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 2.25rem;
-    margin-bottom: 4em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 
     h2 {
         margin: 0 !important;
